<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:menuCategory="secondary"
            android:title="@string/setting_menu_division"
            />
        <item
            android:id="@+id/nav_namj_somoy"
            android:icon="@drawable/ic_baseline_add_to_home_screen_24"
            android:menuCategory="secondary"
            android:title="@string/menu_namj"
            />
        <item
            android:id="@+id/nav_Day"
            android:icon="@drawable/daily"
            android:menuCategory="secondary"
            android:title="@string/menu_home"
            />
        <item
            android:menuCategory="secondary"

            android:id="@+id/nav_week"
            android:icon="@drawable/appointment"

            android:title="@string/menu_gallery" />
        <item
            android:menuCategory="secondary"

            android:id="@+id/nav_month"
            android:icon="@drawable/monthly"
            android:title="@string/menu_slideshow" />
    </group>


    <item


        android:icon="@drawable/ic_baseline_contact_support_24"
        android:menuCategory="secondary"
        android:title="@string/question">


        <menu>
            <item

                android:menuCategory="secondary"

                android:id="@+id/nav_dua"
                android:icon="@drawable/dua"
                android:title="@string/dua">

            </item>
            <item

                android:menuCategory="secondary"

                android:id="@+id/nav_jikir"
                android:icon="@drawable/jikir"
                android:title="@string/jikir">

            </item>


        </menu>
    </item>

    <item

        android:icon="@drawable/ic_baseline_contact_support_24"
        android:menuCategory="secondary"
        android:title="@string/zakat">


        <menu>
            <item

                android:menuCategory="secondary"

                android:id="@+id/nav_zakat_cal"
                android:icon="@drawable/zakat"
                android:title="@string/zakat">

            </item>
            <item

                android:menuCategory="secondary"


                android:id="@+id/nav_ramadan"
                android:icon="@drawable/ramadan"
                android:title="@string/ramadan">

            </item>
            <item

                android:menuCategory="secondary"

                android:id="@+id/nav_question"
                android:icon="@drawable/ic_baseline_contact_support_24"
                android:title="@string/question">

            </item>


        </menu>
    </item>

</menu>

