<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:orientation="vertical"

    tools:context=".ui.Fajar.DayFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="5.5"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
           android:layout_margin="3dp"
            android:elevation="3dp"
           android:backgroundTint="@color/white"
            android:textColor="#770028"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFojor"
            android:text="@string/tfojor"
            />
        <Button
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:backgroundTint="@color/white"
            android:textColor="#770028"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnjohor"
            android:text="@string/tjohor"
            />
        <Button
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:backgroundTint="@color/white"
            android:textColor="#770028"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAsor"
            android:text="@string/tAsor"
            />
        <Button
            android:layout_margin="1dp"
            android:elevation="3dp"
            android:backgroundTint="@color/white"
            android:textColor="#770028"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnMagriv"
            android:text="@string/tMagrib"/>
        <Button
            android:layout_margin="3dp"
            android:elevation="3dp"
            android:backgroundTint="@color/white"
            android:textColor="#770028"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEsha"
            android:text="@string/tEsha"
            />


</LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout_day"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/daynightcycle"
            android:layout_gravity="center"
            />

    </FrameLayout>




</LinearLayout>