<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_color"
    tools:context=".ramadantimetable.Ramadan">

    <!-- TODO: Update blank fragment layout -->


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"

                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="4">

                <TextView


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1.2"
                    android:gravity="center"
                    android:text="@string/din"
                    android:textColor="#056509"/>


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight=".9"
                    android:gravity="center"
                    android:text="@string/day"
                    android:textColor="#056509"/>


                <TextView
                    android:outlineProvider="background"
                    android:id="@+id/text_time_iftar"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/iftar"
                    android:textColor="#056509" />


                <TextView

                    android:text="@string/sehri"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#056509" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    <ScrollView
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerView_ramadan_time_fragment_ramadan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/ramadantimedesign" />

</ScrollView>

    </FrameLayout>