<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.card.MaterialCardView
        android:layout_margin="25dp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:background="@drawable/splash_color"


        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_gravity="center"
        android:id="@+id/textsetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/settingtexxt"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout

android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textsetting"
        android:layout_centerInParent="true"



        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:elevation="3dp"
            android:id="@+id/btSettingYes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/yes"
            android:textSize="20sp"

            android:textColor="#025A05">

        </Button>

        <Button
            android:elevation="3dp"
            android:id="@+id/btSettingNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/no"
            android:textSize="20sp"
            android:textColor="#025A05"
            >

        </Button>
    </LinearLayout>
    </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>